<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/restaurants_menu_name" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/events_menu_name" />
        <item
            android:id="@+id/nav_museums"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/museums_menu_name" />
        <item
            android:id="@+id/nav_other_atractions"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/other_menu_name" />
    </group>
</menu>
